--- a/Test-Auto-Force/src/test/resources/serenity.conf
+++ b/Test-Auto-Force/src/test/resources/serenity.conf
@@ -17,7 +17,7 @@ webdriver {
     browserName = "chrome"
     acceptInsecureCerts = true
     "goog:chromeOptions" {
-      args = ["test-type", "no-sandbox", "ignore-certificate-errors", "--window-size=1000,800",
+      args = ["test-type", "no-sandbox", "ignore-certificate-errors", "--start-maximized","--disable-extensions",
         "incognito", "disable-infobars", "disable-gpu", "disable-default-apps", "disable-popup-blocking"]
     }
   }
@@ -25,7 +25,7 @@ webdriver {
 
 environments {
  default {
-  webdriver.base.url = "https://google.com"
+  webdriver.base.url = "https://shop.polymer-project.org/"
  }
  test{
  webdriver.base.url = "https://yahoo.com"
